--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_env_override
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+maintainer: Alvert Abbaros
+homepage: https://github.com/valtbarbos/flutter_env_override
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
